--- a/trap.html
+++ b/trap.html
@@ -37,7 +37,7 @@
     <section id="music">
         <h2>Latest Songs</h2>
         <p><b>TRAP6109</b> is dedicated to promoting urban trap music and its cultural significance. I aim to connect artists, fans, and enthusiasts through my platform.</p>
-        <img src="image\trapper.jpg" alt="DJ performing" width="600" height="400">
+        <img src="image\trapper.jpg" alt="trap performing" width="600" height="400">
     </section>
 
     <!-- YouTube Section -->
@@ -88,3 +88,4 @@
 
 </body>
 </html>
+
