--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- YouTube Section -->
     <section id="youtube">
         <h2>Watch on YouTube</h2>
-        <p>Catch our latest tracks and music videos on our official YouTube channel.</p>
+        <p>Catch my latest tracks and music videos on our official YouTube channel.</p>
         <div style="display: flex; flex-wrap: wrap; gap: 20px;">
 
            <iframe width="560" height="315" src="https://www.youtube.com/embed/RNURBKavndQ?si=6lchmVGo08cJQkyz" title="YouTube video player"
@@ -77,7 +77,7 @@
     </section>
     <footer>
     <p>&copy; 2025 TRAP6109. All rights reserved.</p>
-    <p>Follow us on social media for the latest updates!</p>
+    <p>Follow me on social media for the latest updates!</p>
     <ul>
         <li><a href="https://www.facebook.com/trap6109" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
         <li><a href="https://www.twitter.com/trap6109" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -88,5 +88,6 @@
 
 </body>
 </html>
+
 
 
