--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="music">
         <h2>Latest Songs</h2>
         <p><b>TRAP6109</b> is dedicated to promoting urban trap music and its cultural significance. I aim to connect artists, fans, and enthusiasts through my platform.</p>
-        <img src="https://imgur.com/gallery/trap6109-4rHVngq" alt="trap performing" width="600" height="400">
+        <img src="https://github.com/vinycodepro/music/blob/main/trapper.jpg?raw=true" alt="trap performing" width="600" height="400">
     </section>
 
     <!-- YouTube Section -->
@@ -88,6 +88,7 @@
 
 </body>
 </html>
+
 
 
 
