--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- YouTube Section -->
     <section id="youtube">
         <h2>Watch on YouTube</h2>
-        <p>Catch my latest tracks and music videos on our official YouTube channel.</p>
+        <p>Catch my latest tracks and music videos on my official YouTube channel.</p>
         <div style="display: flex; flex-wrap: wrap; gap: 20px;">
 
            <iframe width="560" height="315" src="https://www.youtube.com/embed/RNURBKavndQ?si=6lchmVGo08cJQkyz" title="YouTube video player"
@@ -63,7 +63,7 @@
     <!-- About Section -->
     <section id="about">
         <h2>About the Artist</h2>
-        <p>TRAP6109 blends authentic genge-tone vibes with modern urban trap beats. Our sound is influenced by the streets, the hustle, and the culture that inspires millions worldwide.</p>
+        <p>TRAP6109 blends authentic genge-tone vibes with modern urban trap beats. My sound is influenced by the streets, the hustle, and the culture that inspires millions worldwide.</p>
     </section>
 
     <!-- Events Section -->
@@ -88,6 +88,7 @@
 
 </body>
 </html>
+
 
 
 
